Chu de BC Ky thuat lap dat dien - Trang bi phan phoi va Tram bien ap

--- a/baocao-kythuatlapdatdien/chudebaocao-trangbiphanphoi-trambienap-kythuatlapdatdien.tex
+++ b/baocao-kythuatlapdatdien/chudebaocao-trangbiphanphoi-trambienap-kythuatlapdatdien.tex
@@ -153,7 +153,7 @@
 		\column{0.6\textwidth}
 		\begin{enumerate}			
 			\item Nguyễn Văn Đình
-			\item Nguyễn Hoàn Hận
+			\item Nguyễn Hoàng Hận
 			\item Thi Minh Nhựt
 			\item Phạm Thanh Quý
 			\end{enumerate}
